--- a/recipes/lemonade.html
+++ b/recipes/lemonade.html
@@ -20,18 +20,18 @@
         have on hand. </p>
     <h2>Ingredients</h2>
     <ul>
-        <li> Sugar and Water
-        <li> Lemon Juice
-        <li> Ice
+        <li> Sugar and Water</li>
+        <li> Lemon Juice</li>
+        <li> Ice</li>
     </ul>
     <h2>Steps</h2>
     <ol>
         <li>Start by firmly rolling the lemons around on the counter. Cut the lemon in half lengthwise, then squeeze
-            out the juice by hand.
+            out the juice by hand.</li>
         <li>Make a simple syrup by combining sugar and water in a small saucepan. Bring the mixture to a boil, and stir
-            it until the sugar is dissolved.
-        <li>Pour cold water into a pitcher. Stir in lemon juice and pulp, then add simple syrup to taste.
-        <li>Serve over ice. If you're feeling fancy, garnish each glass with a fresh lemon slice
+            it until the sugar is dissolved.</li>
+        <li>Pour cold water into a pitcher. Stir in lemon juice and pulp, then add simple syrup to taste.</li>
+        <li>Serve over ice. If you're feeling fancy, garnish each glass with a fresh lemon slice</li>
     </ol>
 </body>
 
