--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/guacamole.html">Guacamole</a>
-        <li><a href="recipes/lemonade.html">Lemonade</a>
+        <li><a href="recipes/guacamole.html">Guacamole</a></li>
+        <li><a href="recipes/lemonade.html">Lemonade</a></li>
+        <li><a href="recipes/pasta.html">Pasta</a>
     </ul>
 </body>
 
