--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -17,20 +17,20 @@
         You can serve it smooth or chunky depending on your tastes.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li> 3 avocados - peeled, pitted, and mashed
-        <li> 1 lime, juiced
-        <li> 1 teaspoon salt
-        <li> 2 roma (plum) tomatoes, diced
-        <li> 1/2 cup diced onion
-        <li> 3 tablespoons chopped fresh cilantro
-        <li> 1 teaspoon minced garlic
-        <li> 1 pinch ground cayenne pepper (Optional)
+        <li> 3 avocados - peeled, pitted, and mashed</li>
+        <li> 1 lime, juiced</li>
+        <li> 1 teaspoon salt</li>
+        <li> 2 roma (plum) tomatoes, diced</li>
+        <li> 1/2 cup diced onion</li>
+        <li> 3 tablespoons chopped fresh cilantro</li>
+        <li> 1 teaspoon minced garlic</li>
+        <li> 1 pinch ground cayenne pepper (Optional)</li>
     </ul>
     <h2>Steps</h2>
     <ol>
         <li> Mash avocados, lime juice, and salt together in a medium bowl; mix in tomatoes, 
-        onion, cilantro, and garlic. Stir in cayenne pepper.
-        <li> Serve immediately, or cover and refrigerate for 1 hour for improved flavor. 
+        onion, cilantro, and garlic. Stir in cayenne pepper.</li>
+        <li> Serve immediately, or cover and refrigerate for 1 hour for improved flavor. </li>
     </ol>
 </body>
 
